@@ -2,6 +2,7 @@
 	- Fix to scrub resource records of type A and AAAA that have an
 	  inappropriate size. They are removed from responses.
 	- Fix to move msgparse_rrset_remove_rr code to util/msgparse.c.
+	- Fix to add EDE text when RRs have been removed due to length.
 
 6 September 2023: Wouter
 	- Merge #931: Prevent warnings from -Wmissing-prototypes.
